feat: move to dark mode?

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,7 +67,7 @@ bind h split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 
-set -g @tmux2k-theme 'onedark'
+set -g @tmux2k-theme 'catppuccin'
 
 set -g @tmux2k-start-icon ""
 
@@ -80,8 +80,10 @@ set -g @tmux2k-military-time true
 set -g @tmux2k-border-contrast true
 set -g @tmux2k-icons-only false 
 
-set -g @tmux2k-text '#282a36'
-set -g @tmux2k-bg-main '#fafafa' # change bg to white
+# set -g @tmux2k-text '#282a36'
+# set -g @tmux2k-bg-main '#fafafa' # change bg to white
+set -g @tmux2k-text ''
+set -g @tmux2k-bg-main '' # change bg to white
 
 
 
