--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,11 +80,11 @@ set -g @tmux2k-show-powerline true
 set -g @tmux2k-show-fahrenheit true 
 set -g @tmux2k-military-time true
 set -g @tmux2k-border-contrast true
-set -g @tmux2k-icons-only false 
+set -g @tmux2k-icons-only false
 
-# set -g @tmux2k-text '#282a36'
+set -g @tmux2k-text '#282a36'
 set -g @tmux2k-bg-main '#fafafa' # change bg to white
-set -g @tmux2k-text ''
+# set -g @tmux2k-text ''
 # set -g @tmux2k-bg-main '' # change bg to white
 
 
