--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,10 @@ set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 set -g mouse on
 
+
+set -g status-bg black
+set -g status-fg white
+
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 
@@ -24,8 +28,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin '2kabhishek/tmux2k'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
+# set -g @plugin '2kabhishek/tmux2k'
+# set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 # set -g @plugin 'omerxx/tmux-sessionx'
 # set -g @sessionx-preview-enabled 'true'
@@ -67,23 +71,23 @@ bind h split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 
-# set -g @tmux2k-theme 'catppuccin'
+set -g @tmux2k-theme 'catppuccin'
 # set -g @tmux2k-theme 'gruvbox'
-set -g @tmux2k-theme 'duo'
-
-set -g @tmux2k-start-icon ""
-
-# Tmux 2K default configs
-set -g @tmux2k-left-plugins "git pomodoro"
-set -g @tmux2k-right-plugins "cpu ram bandwidth"
-set -g @tmux2k-show-powerline true
-set -g @tmux2k-show-fahrenheit true 
-set -g @tmux2k-military-time true
-set -g @tmux2k-border-contrast true
-set -g @tmux2k-icons-only false
-
-set -g @tmux2k-text '#282a36'
-set -g @tmux2k-bg-main '#fafafa' # change bg to white
+# set -g @tmux2k-theme 'duo'
+#
+# set -g @tmux2k-start-icon ""
+#
+# # Tmux 2K default configs
+# set -g @tmux2k-left-plugins "git pomodoro"
+# set -g @tmux2k-right-plugins "cpu ram bandwidth"
+# set -g @tmux2k-show-powerline true
+# set -g @tmux2k-show-fahrenheit true 
+# set -g @tmux2k-military-time true
+# set -g @tmux2k-border-contrast true
+# set -g @tmux2k-icons-only false
+#
+# set -g @tmux2k-text '#282a36'
+# set -g @tmux2k-bg-main '#fafafa' # change bg to white
 # set -g @tmux2k-text ''
 # set -g @tmux2k-bg-main '' # change bg to white
 
@@ -92,13 +96,13 @@ set -g @tmux2k-bg-main '#fafafa' # change bg to white
 # available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
 
 # it can accept `session`, `rocket`, `window`, or any character.
-set -g @tmux2k-show-left-icon ""
-
-# update powerline symbols
-set -g @tmux2k-show-left-sep ""
-set -g @tmux2k-show-right-sep ""
-
-# change refresh rate
-set -g @tmux2k-refresh-rate 5
+# set -g @tmux2k-show-left-icon ""
+#
+# # update powerline symbols
+# set -g @tmux2k-show-left-sep ""
+# set -g @tmux2k-show-right-sep ""
+#
+# # change refresh rate
+# set -g @tmux2k-refresh-rate 5
 
 run '~/.tmux/plugins/tpm/tpm'
