--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,7 +71,7 @@ bind h split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
 
-set -g @tmux2k-theme 'catppuccin'
+# set -g @tmux2k-theme 'catppuccin'
 # set -g @tmux2k-theme 'gruvbox'
 # set -g @tmux2k-theme 'duo'
 #
