--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,9 @@
-set-option -g default-terminal 'screen-254color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+# set-option -g default-terminal "xterm-256color"
+# set-option -a terminal-features 'xterm-256color:RGB'
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 
 set -g prefix ^F
 set -g base-index 1              # start indexing windows at 1 instead of 0
@@ -9,13 +13,15 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
-set -g default-terminal "${TERM}"
+# set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 set -g mouse on
 
 
-set -g status-bg black
-set -g status-fg white
+# set -g status-bg black
+# set -g status-fg white
+
+
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
@@ -28,6 +34,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
+
+set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @catppuccin_flavor 'latte' # latte, frappe, macchiato or mocha
 # set -g @plugin '2kabhishek/tmux2k'
 # set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
@@ -46,10 +55,10 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L \; display-pane'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D \; display-pane'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U \; display-pane'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R \; display-pane'
 
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
@@ -60,10 +69,10 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 
 bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-h' select-pane -L \; display-pane
+bind-key -T copy-mode-vi 'C-j' select-pane -D \; display-pane
+bind-key -T copy-mode-vi 'C-k' select-pane -U \; display-pane
+bind-key -T copy-mode-vi 'C-l' select-pane -R \; display-pane
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
 bind c new-window -c "#{pane_current_path}"
