--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,8 @@
 # set-option -a terminal-features 'xterm-256color:RGB'
 
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-overrides "xterm-256color:RGB"
+set-option -a terminal-features 'tmux-256color:RGB'
 
 
 set -g prefix ^F
@@ -36,7 +37,16 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
 set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
-set -g @catppuccin_flavor 'latte' # latte, frappe, macchiato or mocha
+set -g @catppuccin_flavor "latte"
+set -g @catppuccin_window_status_style "rounded"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 # set -g @plugin '2kabhishek/tmux2k'
 # set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
